--- a/Shooping/Shooping/Views/Countries/Edit.cshtml
+++ b/Shooping/Shooping/Views/Countries/Edit.cshtml
@@ -12,10 +12,9 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="States" />
             <partial name="_Country" />
-
             <div class="form-group mt-2">
                 <input type="submit" value="Guardar" class="btn btn-outline-primary" />
                 <a asp-action="Index" Class="btn btn-outline-success">Regresar</a>
